# project_stock

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.claude/: MCP_PERMISSION_MATRIX.md  ORCHESTRATION.md  settings.json
.claude/agents/: architect-planner.md  code-reviewer.md  codex-task-writer.md  implementation-guardian.md  test-debugger.md
.claude/commands/: create-codex-task.md  document-decision.md  (+3 more)
.codex/: CODEX_ORCHESTRATION.md  CODEX_SETUP_NOTES.md  CODEX_TASK_PACKET_TEMPLATE.md  instructions.md  task-template.md
.github/: CODEOWNERS  pull_request_template.md
alembic/: env.py
app/: main.py
docs/: README.md  backend-v0.2.md  testing.md
scripts/: claude-bot-gh.sh  claude-bot-token.py  contract_smoke.py
tests/: conftest.py  test_alembic_metadata.py  test_alert_candidates.py  test_alerts.py  test_analysis_flow.py  test_api_contract.py  test_assets.py  test_assets_symbol_detail.py  test_auth.py  test_briefings.py  test_config.py  test_cors.py  test_dashboard_summary.py  test_dashboard_trends.py  test_decision_checklist.py  test_decision_logs.py  test_error_handlers.py  test_error_responses.py  test_health.py  test_integration_flow.py  test_job_runs.py  test_llm_adapter.py  test_llm_data_contracts.py  test_llm_factory.py  test_llm_gateway.py  test_llm_privacy.py  test_llm_router.py  test_llm_types.py  test_local_provider.py  test_logging.py  test_market_indices.py  test_news_adapter.py  test_news_analysis.py  test_news_ingestion.py  test_news_items.py  test_pagination.py  test_portfolios.py  test_price_ingestion.py  test_price_series.py  test_providers.py  (+14 more)
(+486 files in other folders)
