[project]
name = "ai-assisted-fastapi-template"
version = "0.1.0"
description = "FastAPI variant of the AI-assisted development template"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.115.0",
    "feedparser>=6.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.0",
    "rq>=1.16.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.5.0",
    "types-passlib>=1.7.7.20260211",
    "types-python-jose>=3.5.0.20260408",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "alembic/*"]
